<resources>
    <string name="app_name">MPlayer</string>
    <string name="thank_you_for_installing_this_application">Thank you for installing this application</string>
    <string name="for_playing_videos_in_this_app_you_have_to_allow_for_access_all_then_videos_in_this_device_allow_access_and_we_are_ready_to_play_go">For playing videos in this app, you have to allow for access all the videos in this device.Allow access and we are ready to play go.</string>
    <string name="allow_access">Allow Access</string>
    <string name="refresh">Refresh</string>
    <string name="refresh2">Refresh</string>
    <string name="share_app">Share App</string>
    <string name="rateus">RateUs</string>
    <string name="play_next">Play Next</string>
    <string name="send">Send</string>
    <string name="properties">Properties</string>
    <string name="delete">Delete</string>
    <string name="subtitle">Subtitle</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort by</string>
    <string name="play_video">Play Video</string>
    <string name="rename">Rename</string>
    <string name="share">Share</string>
    <string name="volume">Volume</string>
    <string name="brightness">Brightness</string>
    <string name="night">Night</string>
    <string name="popup">Popup</string>
    <string name="mute">Mute</string>
    <string name="rotate">Rotate</string>
    <string name="equalizer">Equalizer</string>
    <string name="speed">Speed</string>
    <string name="videos">" Videos"</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete</string>
    <string name="cancel">CANCEL</string>
    <string name="select_a_subtitle_file">Select a subtitle file</string>
    <string name="ok">OK</string>
    <string name="select_playback_speed">Select Playback Speed</string>
    <string name="name_a_to_z">Name (A to Z)</string>
    <string name="size">Size</string>
    <string name="date">Date</string>
    <string name="length">Length</string>
    <string name="done">DONE</string>
    <string name="enable_write_setting_for_brightness_control">Enable write setting for brightness control</string>
    <string name="allow_write_settings_for_swipe_controls">Allow write settings for swipe controls</string>
    <string name="video_playing_error">video Playing Error</string>
    <string name="no_next_video">No Next video</string>
    <string name="no_previous_video">No Previous video</string>
    <string name="unlocked">unlocked</string>
    <string name="locked">Locked</string>
    <string name="share_video_via">Share Video via</string>
    <string name="video_deleted">Video Deleted</string>
    <string name="can_t_deleted">can\'t deleted</string>
    <string name="full_screen">Full Screen</string>
    <string name="zoom">Zoom</string>
    <string name="fit">Fit</string>
    <string name="no_generated">No Generated</string>
    <string name="please_enter_video_name">Please enter video name</string>
    <string name="video_renamed">Video Renamed</string>
    <string name="process_failed">Process Failed</string>
    <string name="unmute">unMute</string>
    <string name="day">Day</string>
</resources>